-
Bug
-
Resolution: Fixed
-
P4: Low
-
6.7, 6.8
-
None
-
-
70e0daf31 (dev), 820a9c7f2 (6.10), efc6a4da3 (6.9), 232ed8c8c (tqtc/lts-6.8)
Repeater is supposed to create delegates and update its count property according to its model. But when a Repeater's parent is null, it won't create any delegates (reporting null for any itemAt query) but confusingly would still bump its counter.
This is illogical and does not make sense.
The documentation has a note that says, quoting:
Note: The number of items in the model as reported by count may differ from the number of created delegates if the Repeater is in the process of instantiating delegates or is incorrectly set up.
so it wouldn't hurt to at least clarify what the "incorrectly set up" can possibly mean.
Additional information
I found this behavior while writing a test case for my iterator adapter, and it was working fine in a bigger file loaded via a qml runtime, but silently and mysteriously returned an array of three null items in a standalone test component. Wasted lots of time trying to figure out why.
- relates to
-
QTBUG-33474 Repeater: count property not behaving as expected
-
- Closed
-
-
QTBUG-57155 Repeater: itemAt returns nullptr when count says it should be valid
-
- Closed
-
For Gerrit Dashboard: QTBUG-127955 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
655159,13 | Doc: Describe when Repeater.count doesn't match delegate instance count | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
660580,2 | Doc: Describe when Repeater.count doesn't match delegate instance count | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
663198,2 | Doc: Describe when Repeater.count doesn't match delegate instance count | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
664017,2 | Doc: Describe when Repeater.count doesn't match delegate instance count | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |